# OpenGauss

./: .gitignore  GaussProofSandbox.lean  Main.lean  OnePostulate.lean  README.md  documentation.md  lake-manifest.json  lakefile.toml  pyproject.toml
.gauss/: project.yaml
.github/workflows/: lean_action_ci.yml
GaussProofSandbox/: Basic.lean
OnePostulate/: Basic.lean  ClassificationDerivation.lean  KillingForm.lean  KinematicAlgebra.lean  Selection.lean  SpacetimeMatrices.lean  SpacetimeRepresentation.lean  VelocitySpace.lean
blueprint/src/: content.tex
gauss_cli/: __init__.py  autoformalize.py
paper/: one-postulate.tex
scripts/: install.sh
tests/gauss_cli/: test_autoformalize.py
tests/installer/ubuntu_repository_local_install_smoke/: run-in-container.sh
